# hecto

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  renderer.rs
src/core/: config.rs  folder.rs  mod.rs  parser.rs  post.rs
src/core/parser/: mod.rs  post.rs
src/core/posts/: folder.rs  folder_entry.rs  folders.rs  mod.rs
src/renderer/: context.rs  folder_view.rs  mod.rs  post_view.rs
src/server/: mod.rs  query.rs  response.rs  thread_pool.rs
src/util/: mod.rs
src/watcher/: mod.rs  site.rs  theme.rs  watcher.rs
themes/default/: folder.tpl  page.tpl  post.hbs  post.tpl
