[package]
name = "hecto"
version = "0.1.0"
authors = ["Félix Léveillé <flxleveille@gmail.com>"]
edition = "2018"

[dependencies]
pulldown-cmark = "0.5.3"
handlebars = "2.0.1"
notify = "5.0.0-pre.1"
crossbeam-channel = "0.3.9"
serde = { version = "1.0.98", features = ["derive"] }
chrono = "0.4.7"
clap = "2.33.0"
hyper = "0.12.33"